--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <slf4j.version>1.7.10</slf4j.version>
-        <jts.version>1.13</jts.version>
+        <jts.version>1.16.0</jts.version>
         <proj.version>0.1.0</proj.version>
     </properties>
 
     <dependencies>
+
         <dependency>
-            <groupId>com.vividsolutions</groupId>
-            <artifactId>jts</artifactId>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
             <version>${jts.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.osgeo</groupId>
             <artifactId>proj4j</artifactId>
