--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>wk</groupId>
     <artifactId>doraemon</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>doraemon</name>
     <description>Doraemon's Pocket. YAO-NI-MING-3000. Handy tools for JAVA.</description>
@@ -32,11 +32,15 @@
             <artifactId>jts-core</artifactId>
             <version>${jts.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.osgeo</groupId>
             <artifactId>proj4j</artifactId>
             <version>${proj.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+            <version>1.1.3</version>
         </dependency>
         <dependency>
             <groupId>ch.hsr</groupId>
