--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,4 +14,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B -Dmaven.test.skip=true package --file pom.xml
+      run: mvn -Dmaven.test.skip=true deploy -Dregistry=https://maven.pkg.github.com/wkgreat -Dtoken=dbfb6a3e55969ae7c4f6cc748709d6d759560a68
