--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,8 +10,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -Dmaven.test.skip=true deploy -Dregistry=https://maven.pkg.github.com/wkgreat -Dtoken=dbfb6a3e55969ae7c4f6cc748709d6d759560a68
+      run: |
+        mkdir ~/.m2
+        echo "<settings><servers><server><id>github</id><username>wkgreat</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
+        mvn -Dmaven.test.skip=true deploy
