--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,5 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: |
-        echo "<settings><servers><server><id>github</id><username>wkgreat</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
-        mvn -Dmaven.test.skip=true deploy
+      run:
+
