--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>wkgreat</groupId>
+    <groupId>wk</groupId>
     <artifactId>doraemon</artifactId>
     <version>1.1</version>
     <packaging>jar</packaging>
@@ -51,13 +51,13 @@
         </repository>
     </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>doraemon</name>
-            <url>https://maven.pkg.github.com/wkgreat/doraemon</url>
-        </repository>
-    </distributionManagement>
+<!--    <distributionManagement>-->
+<!--        <repository>-->
+<!--            <id>github</id>-->
+<!--            <name>repo</name>-->
+<!--            <url>https://maven.pkg.github.com/wkgreat/repo</url>-->
+<!--        </repository>-->
+<!--    </distributionManagement>-->
 
 
     <dependencies>
