--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,24 @@
         </developer>
     </developers>
 
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <scope>compile</scope>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <scope>provided</scope>
+            </properties>
+        </profile>
+    </profiles>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
@@ -95,51 +113,61 @@
             <groupId>org.geotools</groupId>
             <artifactId>gt-shapefile</artifactId>
             <version>${geotools.version}</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-geojson</artifactId>
             <version>${geotools.version}</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
             <version>${jts.version}</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.osgeo</groupId>
             <artifactId>proj4j</artifactId>
             <version>${proj.version}</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.gavaghan</groupId>
             <artifactId>geodesy</artifactId>
             <version>1.1.3</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>ch.hsr</groupId>
             <artifactId>geohash</artifactId>
             <version>1.0.12</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.59</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.5</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
             <version>3.2</version>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -149,7 +177,6 @@
         </dependency>
 
     </dependencies>
-
 
     <build>
         <plugins>
