--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>wkgreat</groupId>
     <artifactId>doraemon</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>doraemon</name>
     <description>Geographic and some other utilities</description>
